Enrich borrowed books with member and book names